# lib_raytrace

./: .gitignore  CMakeLists.txt  README.md  contributors.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  Stats.cpp  Stats.h  data_ssp.cpp  data_ssp.h  regular_ssp.cpp  regular_ssp.h  sparse_ssp.cpp  sparse_ssp.h  ssp.cpp  ssp.h
test_data/: depths.txt  depths_svp.txt  svp.txt  theta_tt.txt
